link Chart to profile , project

--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -208,13 +208,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="profile.html" class="nav-link">
+                <a href="../../profile.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Profile</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="projects.html" class="nav-link">
+                <a href="../../projects.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Projects</p>
                 </a>
