--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -22,11 +22,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="../../index3.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
-      </li>
+        <a href="../../index.html" class="nav-link">Home</a>
     </ul>
 
     <!-- SEARCH FORM -->
@@ -145,7 +141,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a href="../../index.html" class="brand-link">
       <img src="../../dist/img/CSMJU.jpg" alt="CSMJU" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Admin CSMJU</span>
     </a>
@@ -155,10 +151,10 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img  src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image" >
         </div>
         <div class="info">
-          <a href="#" class="d-block">Sri Baokeaw</a>
+          <a href="../../profile.html" class="d-block">Sri Baokeaw</a>
         </div>
       </div>
 
@@ -238,8 +234,8 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">ChartJS</li>
+              <li class="breadcrumb-item"><a href="../../login.html">logout</a></li>
+              
             </ol>
           </div>
         </div>
@@ -251,30 +247,6 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6">
-            <!-- AREA CHART -->
-            <div class="card card-primary">
-              <div class="card-header">
-                <h3 class="card-title">Area Chart</h3>
-
-                <div class="card-tools">
-                  <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                    <i class="fas fa-minus"></i>
-                  </button>
-                  <button type="button" class="btn btn-tool" data-card-widget="remove">
-                    <i class="fas fa-times"></i>
-                  </button>
-                </div>
-              </div>
-              <div class="card-body">
-                <div class="chart">
-                  <canvas id="areaChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
-                </div>
-              </div>
-              <!-- /.card-body -->
-            </div>
-            <!-- /.card -->
-
-            <!-- DONUT CHART -->
             <div class="card card-danger">
               <div class="card-header">
                 <h3 class="card-title">Donut Chart</h3>
@@ -293,6 +265,15 @@
               </div>
               <!-- /.card-body -->
             </div>
+                  <canvas id="areaChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
+                <!-- </div> -->
+              <!-- </div> -->
+              <!-- /.card-body -->
+            <!-- </div> -->
+            <!-- /.card -->
+
+            <!-- DONUT CHART -->
+            
             <!-- /.card -->
 
             <!-- PIE CHART -->
@@ -366,7 +347,7 @@
             <!-- /.card -->
 
             <!-- STACKED BAR CHART -->
-            <div class="card card-success">
+            <!-- <div class="card card-success">
               <div class="card-header">
                 <h3 class="card-title">Stacked Bar Chart</h3>
 
@@ -378,12 +359,12 @@
                     <i class="fas fa-times"></i>
                   </button>
                 </div>
-              </div>
-              <div class="card-body">
+              </div> -->
+              <!-- <div class="card-body">
                 <div class="chart">
                   <canvas id="stackedBarChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
                 </div>
-              </div>
+              </div> -->
               <!-- /.card-body -->
             </div>
             <!-- /.card -->
