--- a/projects.html
+++ b/projects.html
@@ -23,11 +23,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="../../index3.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
-      </li>
+        <a href="./index.html" class="nav-link">Home</a>
     </ul>
 
     <!-- SEARCH FORM -->
@@ -146,7 +142,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a href="./index.html" class="brand-link">
         <img src="dist/img/CSMJU.jpg" alt="CSMJU" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">Admin CSMJU</span>
     </a>
@@ -159,7 +155,7 @@
           <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Sri Baokeaw</a>
+          <a href="./profile.html" class="d-block">Sri Baokeaw</a>
         </div>
       </div>
 
@@ -239,8 +235,8 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Projects</li>
+              <li class="breadcrumb-item"><a href="./login.html">logout</a></li>
+              
             </ol>
           </div>
         </div>
