--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Adminpage | Fonfonprum</title>
 
+  <!-- <link rel="styesheet" href="./dist/css/pikachu.css"> -->
+
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <!-- <link rel="stylesheet" -->
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
@@ -152,8 +154,11 @@
       <div class="content-header">
         <div class="container-fluid">
           <div class="row mb-2">
-            <div class="col-sm-6">
+            <div class="col-sm-0">
               <h1 style="font-size: 40px; font-weight: 750;" class="m-0 text-dark">Contact</h1>
+            </div>
+
+            <div class="col-sm">
               <i><img style="width: 80px;" src="./dist/img/email.png" alt="Facebook"></i>
               <i><img style="width: 80px;" src="./dist/img/social-media.png" alt="Facebook"></i>
               <i><img style="width: 80px;" src="./dist/img/campaign.png" alt="Facebook"></i>
@@ -242,6 +247,15 @@
               </div>
             </div>
             <!-- ./col -->
+            <!-- <div class="wrapper">
+              <div class="eye">
+                <div class="eyelids"></div>
+                <div class="eyelids2"></div>
+              </div>
+              <div class="nose"></div>
+              <div class="mouth"></div> -->
+            </div>
+
           </div>
           <!-- /.row -->
           <!-- Main row -->
