--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- /.navbar -->
 
     <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <aside class="main-sidebar sidebar-dark elevation-4" style="background-color:#E61BCD;">
       <!-- Brand Logo -->
       <a href="./index.html" class="brand-link">
         <img src="dist/img/CSMJU.jpg" alt="CSMJU" class="brand-image img-circle elevation-3" style="opacity: .8">
