--- a/profile.html
+++ b/profile.html
@@ -276,10 +276,11 @@
                         <!-- /.user-block -->
                         <p>
                           When I was my first year in the third lab, I made new friends and started living a college.
-                        <p>yahuuu!!</p>
+                        <p>yahooo!!</p>
                         </p>
                         <div style="display: flex; justify-content: center;">
-                        <img style="  width: 600px; height: 300px; border-radius: 30px; " src="./dist/img/13.jpg " alt="">
+                          <img style="  width: 600px; height: 300px; border-radius: 30px; " src="./dist/img/13.jpg "
+                            alt="">
                         </div>
                         <p>
                           <a href="#" class="link-black text-sm mr-2"><i class="fas fa-share mr-1"></i> Share</a>
@@ -290,8 +291,9 @@
                             </a>
                           </span>
                         </p>
-
-                        <input class="form-control form-control-sm" type="text" placeholder="Type a comment">
+                        <div>
+                          <input class="form-control form-control-sm" type="text" placeholder="Type a comment">
+                        </div>
                       </div>
 
                       <div class="post clearfix">
@@ -303,13 +305,13 @@
                           </span>
                           <span class="description">Sent you a message - 3 days ago</span>
                         </div>
-                        
+
                         <p>
                           Code Line Party Day When I was in the 2nd year of school, I brought the children to eat pork.
                         </p>
                         <div style="display: flex; justify-content: center;">
-                        <img style="  width: 600px; height: 300px; border-radius: 30px;" src="./dist/img/14.jpg "
-                          alt="class 2">
+                          <img style="  width: 600px; height: 300px; border-radius: 30px;" src="./dist/img/14.jpg "
+                            alt="class 2">
                         </div>
 
                         <p>
@@ -326,7 +328,7 @@
                           <div class="input-group input-group-sm mb-0">
                             <input class="form-control form-control-sm" placeholder="Response">
                             <div class="input-group-append">
-                              <button type="submit" class="btn btn-danger">Send</button>
+                              <!-- <button type="submit" class="btn btn-danger">Send</button> -->
                             </div>
                           </div>
                         </form>
@@ -345,8 +347,8 @@
                           <div class="col-sm">
                             <p>University march.</p>
                             <div style="display: flex; justify-content: center;">
-                            <img style="  width: 600px; height: 300px; border-radius: 30px;" src="./dist/img/15.jpg"
-                              alt="class 3">
+                              <img style="  width: 600px; height: 300px; border-radius: 30px;" src="./dist/img/15.jpg"
+                                alt="class 3">
                             </div>
                           </div>
                         </div>
@@ -361,7 +363,7 @@
                           </span>
                         </p>
 
-                        <input class="form-control form-control-sm" type="text" placeholder="Type a comment">
+                        <input class="form-control form-control-sm" type="text" placeholder="Type a comment ">
                       </div>
                       <!-- /.post -->
                     </div>
@@ -383,50 +385,40 @@
                           <div class="timeline-item">
                             <span class="time"><i class="far fa-clock"></i> 12:05</span>
 
-                            <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
+                            <h3 class="timeline-header"><a href="#">University degree</a></h3>
+                            <div style="display: flex; justify-content: center;">
+                              <img style="width: 200px; " src="./dist/img/360px-มหาวิทยาลัยแม่โจ้.png" alt="">
+                            </div>
 
-                            <div class="timeline-body">
-                              Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
-                              weebly ning heekya handango imeem plugg dopplr jibjab, movity
-                              jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
-                              quora plaxo ideeli hulu weebly balihoo...
+                            <div class="timeline-body" style="display: flex; justify-content: center;">
+                              When I attended college at Mae Jo University.
                             </div>
                             <div class="timeline-footer">
-                              <a href="#" class="btn btn-primary btn-sm">Read more</a>
-                              <a href="#" class="btn btn-danger btn-sm">Delete</a>
+                              <a href="https://www.mju.ac.th/main/" target="_blank" class="btn btn-warning btn-flat btn-sm">View</a>
+                            </div>
+                            <div class="timeline-footer">
+
                             </div>
                           </div>
                         </div>
-                        <!-- END timeline item -->
-                        <!-- timeline item -->
-                        <div>
-                          <i class="fas fa-user bg-info"></i>
 
-                          <div class="timeline-item">
-                            <span class="time"><i class="far fa-clock"></i> 5 mins ago</span>
-
-                            <h3 class="timeline-header border-0"><a href="#">Sarah Young</a> accepted your friend
-                              request
-                            </h3>
-                          </div>
-                        </div>
-                        <!-- END timeline item -->
-                        <!-- timeline item -->
                         <div>
+
                           <i class="fas fa-comments bg-warning"></i>
 
                           <div class="timeline-item">
                             <span class="time"><i class="far fa-clock"></i> 27 mins ago</span>
 
-                            <h3 class="timeline-header"><a href="#">Jay White</a> commented on your post</h3>
+                            <h3 class="timeline-header"><a href="#">High school</a></h3>
+                            <div style="display: flex; justify-content: center;">
+                              <img src="./dist/img/มปศ.png" alt="">
+                            </div>
 
-                            <div class="timeline-body">
-                              Take me to your leader!
-                              Switzerland is small and neutral!
-                              We are more like Germany, ambitious and misunderstood!
+                            <div class="timeline-body" style="display: flex;  justify-content: center;">
+                              Secondary School 6 years "Mae Sai Prasit School"
                             </div>
                             <div class="timeline-footer">
-                              <a href="#" class="btn btn-warning btn-flat btn-sm">View comment</a>
+                              <a href="http://maesai.ac.th/v2019/" target="_blank" class="btn btn-warning btn-flat btn-sm">View</a>
                             </div>
                           </div>
                         </div>
@@ -434,7 +426,7 @@
                         <!-- timeline time label -->
                         <div class="time-label">
                           <span class="bg-success">
-                            3 Jan. 2014
+                            3 Jan. 2010
                           </span>
                         </div>
                         <!-- /.timeline-label -->
@@ -445,13 +437,17 @@
                           <div class="timeline-item">
                             <span class="time"><i class="far fa-clock"></i> 2 days ago</span>
 
-                            <h3 class="timeline-header"><a href="#">Mina Lee</a> uploaded new photos</h3>
+                            <h3 class="timeline-header"><a href="#">Elementary level</a></h3>
 
-                            <div class="timeline-body">
-                              <img src="https://placehold.it/150x100" alt="...">
-                              <img src="https://placehold.it/150x100" alt="...">
-                              <img src="https://placehold.it/150x100" alt="...">
-                              <img src="https://placehold.it/150x100" alt="...">
+                            <div class="timeline-body" style="display: flex; justify-content: center;">
+                              <img src="./dist/img/เวียงพาน.jpg" alt="...">
+
+                            </div>
+                            <div class="timeline-body" style="display: flex;  justify-content: center;">
+                              Primary school "Ban Wiang Phan School"
+                            </div>
+                            <div class="timeline-footer">
+                              <a href="http://wiangphan.com/" target="_blank" class="btn btn-warning btn-flat btn-sm">View</a>
                             </div>
                           </div>
                         </div>
