--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Projects</title>
+    <title>Adminpage | Fon fonprum</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet"
@@ -282,8 +282,7 @@
                                         Project Name
                                     </th>
                                     <th style="width: 30%">
-                                        Team Members
-                                    </th>
+                                        Portfolio
                                     <th>
                                         Project Progress
                                     </th>
@@ -301,46 +300,42 @@
                                     </td>
                                     <td>
                                         <a>
-                                            AdminLTE v3
+                                            My DIRY
                                         </a>
                                         <br />
                                         <small>
-                                            Created 01.01.2019
+                                            Created 20.07.2019
                                         </small>
                                     </td>
                                     <td>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <iframe src="https://projec-number1.web.app/?fbclid=IwAR3kZkyipyolIIqSDHLJLIK1xWGG3jSh_yEMEAkjVYDjABnLXnX3o9GShNQ"  
-                                                style=""
-                                                ></iframe>
+                                                <iframe
+                                                    src="https://projec-number1.web.app/?fbclid=IwAR3kZkyipyolIIqSDHLJLIK1xWGG3jSh_yEMEAkjVYDjABnLXnX3o9GShNQ"
+                                                    style=""></iframe>
                                             </li>
                                         </ul>
                                     </td>
                                     <td class="project_progress">
                                         <div class="progress progress-sm">
                                             <div class="progress-bar bg-green" role="progressbar" aria-valuenow="57"
-                                                aria-valuemin="0" aria-valuemax="100" style="width: 57%">
+                                                aria-valuemin="0" aria-valuemax="100" style="width: 100%">
                                             </div>
                                         </div>
                                         <small>
-                                            57% Complete
+                                            100% Complete
                                         </small>
                                     </td>
                                     <td class="project-state">
                                         <span class="badge badge-success">Success</span>
                                     </td>
                                     <td class="project-actions text-right">
-                                        <a class="btn btn-primary btn-sm" href="#">
+                                        <a class="btn btn-primary btn-sm" href="https://projec-number1.web.app/">
                                             <i class="fas fa-folder">
                                             </i>
                                             View
                                         </a>
-                                        <a class="btn btn-info btn-sm" href="#">
-                                            <i class="fas fa-pencil-alt">
-                                            </i>
-                                            Edit
-                                        </a>
+
                                         <a class="btn btn-danger btn-sm" href="#">
                                             <i class="fas fa-trash">
                                             </i>
@@ -349,6 +344,112 @@
                                     </td>
                                 </tr>
                             </tbody>
+
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        #
+                                    </td>
+                                    <td>
+                                        <a>
+                                            My Proflie
+                                        </a>
+                                        <br />
+                                        <small>
+                                            Created 27.07.2019
+                                        </small>
+                                    </td>
+                                    <td>
+                                        <ul class="list-inline">
+                                            <li class="list-inline-item">
+                                                <iframe
+                                                    src="https://project-number2-d28a0.firebaseapp.com/">
+                                                </iframe>
+                                            </li>
+                                        </ul>
+                                    </td>
+                                    <td class="project_progress">
+                                        <div class="progress progress-sm">
+                                            <div class="progress-bar bg-green" role="progressbar" aria-valuenow="57"
+                                                aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                            </div>
+                                        </div>
+                                        <small>
+                                            100% Complete
+                                        </small>
+                                    </td>
+                                    <td class="project-state">
+                                        <span class="badge badge-success">Success</span>
+                                    </td>
+                                    <td class="project-actions text-right">
+                                        <a class="btn btn-primary btn-sm" href="https://project-number2-d28a0.firebaseapp.com/">
+                                            <i class="fas fa-folder">
+                                            </i>
+                                            View
+                                        </a>
+
+                                        <a class="btn btn-danger btn-sm" href="#">
+                                            <i class="fas fa-trash">
+                                            </i>
+                                            Delete
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+
+                            
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        #
+                                    </td>
+                                    <td>
+                                        <a>
+                                            Form
+                                        </a>
+                                        <br />
+                                        <small>
+                                            Created 05.08.2019
+                                        </small>
+                                    </td>
+                                    <td>
+                                        <ul class="list-inline">
+                                            <li class="list-inline-item">
+                                                <iframe
+                                                    src="https://project-form-ee228.firebaseapp.com/"
+                                                    style=""></iframe>
+                                            </li>
+                                        </ul>
+                                    </td>
+                                    <td class="project_progress">
+                                        <div class="progress progress-sm">
+                                            <div class="progress-bar bg-green" role="progressbar" aria-valuenow="57"
+                                                aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                            </div>
+                                        </div>
+                                        <small>
+                                            100% Complete
+                                        </small>
+                                    </td>
+                                    <td class="project-state">
+                                        <span class="badge badge-success">Success</span>
+                                    </td>
+                                    <td class="project-actions text-right">
+                                        <a class="btn btn-primary btn-sm" href="https://project-form-ee228.firebaseapp.com/">
+                                            <i class="fas fa-folder">
+                                            </i>
+                                            View
+                                        </a>
+
+                                        <a class="btn btn-danger btn-sm" href="#">
+                                            <i class="fas fa-trash">
+                                            </i>
+                                            Delete
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+
                         </table>
                     </div>
                     <!-- /.card-body -->
