updatenew by fon

--- a/index.html
+++ b/index.html
@@ -202,15 +202,15 @@
               <!-- small box -->
               <div class="small-box bg-success">
                 <div class="inner">
-                  <i><img style="width: 80px;" src="./dist/img/line.png" alt=""></i>
+                  <i><a href=""></a><img style="width: 80px;" src="./dist/img/line.png" alt="" ></i>
                   <h3>LINE</h3>
 
 
                 </div>
                 <div class="icon">
-                  <i><img style="width: 100px; height: 100px;" src="./dist/img/girl 2.png" alt=""></i>
+                  <i><a href="https://developers.line.biz/en/services/line-login/"><img style="width: 100px; height: 100px;" src="./dist/img/girl 2.png" alt=""></a></i>
                 </div>
-                <a href="" class="small-box-footer">Click <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="https://developers.line.biz/en/services/line-login/" class="small-box-footer">Click <i class="fas fa-arrow-circle-right"></i></a>
               </div>
             </div>
             <!-- ./col -->
@@ -246,19 +246,17 @@
                     class="fas fa-arrow-circle-right"></i></a>
               </div>
             </div>
-            <!-- ./col -->
-            <!-- <div class="wrapper">
-              <div class="eye">
-                <div class="eyelids"></div>
-                <div class="eyelids2"></div>
-              </div>
-              <div class="nose"></div>
-              <div class="mouth"></div> -->
-          </div>
 
+          </div>
+          <div>
+            <p style="font-size: 30px; display: flex; justify-content: center; font-weight: 450;">-----LIFE STYLE----</p>
+          </div>
+          <div style="display: flex; justify-content: center;">
+            <img style="border-radius: 50px; box-shadow: 10px 10px 20px #ccc; width:950px;" src="./dist/img/fon.jpg"
+              alt="">
+          </div>
         </div>
-        <!-- /.row -->
-        <!-- Main row -->
+
 
 
 
