--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -153,7 +153,7 @@
         labels: ['ปี 1 เทอม 1', 'ปี 1 เทอม 2', 'ปี 2 เทอม 1', 'ปี 2 เทอม 2'],
         datasets: [{
             label: '# เกรด',
-            data: [100, 50, 1, 50, 2.5, 3],
+            data: [2.83,2.95, 3.13, 3.28],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
